--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "n3": "1.0.0",
+    "express": "^4.16.4",
+    "n3": "^1.0.4",
     "request": "2.88.0",
-    "pug": "2.0.3"
+    "pug": "2.0.3",
+    "coffeescript": "*"
   },
   "engines": {
     "node": "8.x"
